--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,13 @@
 .App {
-  text-align: center;
+  padding: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+:root {
+  --s1: red;
+  --s2: orange;
+  --s3: yellow;
+  --s4: green;
+  --s5: aqua;
 }
 
 .App-header {
