--- a/src/style/Art.css
+++ b/src/style/Art.css
@@ -1,26 +1,35 @@
+@import "../App.css";
+
 /* ITEM */
 
 #item {
     width: 500px;
     height: 500px;
     flex-shrink: 0;
+    background-color: #dddddd;
+    margin: 10px;
+    padding: 10px;
 }
 
 #img-container {
     height: 80%;
     img {
         height: 100%;
-        margin-left: auto;
-        margin-right: auto;
     }
 }
 
 
 /* GALLERY */
 
-#gallery {
+#wrapper {
     width: 500px;
+}
+#gallery {
+    width: 40vw;
+    margin-right: 5vw;
     overflow: hidden;
+    background-color: #aaaaaa;
+    padding: 10px;
 }
 
 #gallery-content {
@@ -28,9 +37,8 @@
     transition: transform 0.3s ease;
 }
 
-
 /* ART */
-
 #art {
     display: flex;
 }
+
