--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,24 @@
   padding: 20px;
 }
 
-:root {
-  --s1: red;
-  --s2: orange;
-  --s3: yellow;
-  --s4: green;
-  --s5: aqua;
+.s1 {
+  background-color: pink;
+}
+
+.s2 {
+  background-color: orange;
+}
+
+.s3 {
+  background-color: yellow;
+}
+
+.s4 {
+  background-color: lime;
+}
+
+.s5 {
+  background-color: aqua;
 }
 
 .App-header {
