--- a/src/style/Gallery.css
+++ b/src/style/Gallery.css
@@ -6,7 +6,7 @@
     width: 500px;
     height: 500px;
     flex-shrink: 0;
-    background-color: #dddddd;
+    background-color: #ccc;
     margin: 10px;
     padding: 10px;
 }
@@ -25,10 +25,8 @@
     width: 500px;
 }
 #gallery {
-    width: 40vw;
     margin-right: 5vw;
     overflow: hidden;
-    background-color: #aaaaaa;
     padding: 10px;
 }
 
@@ -36,9 +34,3 @@
     display: flex;
     transition: transform 0.3s ease;
 }
-
-/* ART */
-#art {
-    display: flex;
-}
-
