--- a/src/style/Bookshelf.css
+++ b/src/style/Bookshelf.css
@@ -10,7 +10,7 @@
 
 .top, .bottom {
     height: 280px;
-    background-color: tan;
+    background-color: brown;
     text-wrap: wrap;
 }
 
@@ -26,7 +26,7 @@
     position: absolute;
     backface-visibility: hidden;
     transition: transform 0.5s;
-    border-radius: 10px;
+    border-radius: 20px;
     
   }
 
@@ -51,11 +51,12 @@
   }
 
 .top {
-    border-bottom: 7px brown solid;
+    border-bottom: 7px black solid;
 }
 
 .s1, .s2, .s3, .s4, .s5 {
     border-radius: 20px;
+    border: 1px black solid;
 }
 
 .s1 {
@@ -89,9 +90,9 @@
 }
 
 #shelf {
-    background-color: tan;
+    background-color: brown;
     display: flex;
     flex-wrap: wrap;
     width: 480px;
-    border: 10px brown solid;
+    border: 10px black solid;
 }
