--- a/src/style/Notebook.css
+++ b/src/style/Notebook.css
@@ -7,17 +7,28 @@
         margin-top: 20px;
     }
 
-    p {
-        padding-bottom: 10px;
-    }
-
     a:hover {
         color: purple;
+    }
+
+    p {
+        margin: 10px;
     }
 
     background-color: #f0f0f0;
     width: 90%;
     text-align: center;
+    margin-bottom: 20px;
+}
+
+#name {
+    font-weight: bold;
+}
+
+#desc {
+    opacity: 0.3;
+    text-align: left;
+    padding: 2% 10% 0% 10%;
 }
 
 #page {
@@ -60,6 +71,8 @@
 
     button {
         margin: 5px;
+        border: none;
+        height: 20px;
     }
 }
 
