--- a/src/style/FilmReel.css
+++ b/src/style/FilmReel.css
@@ -26,16 +26,17 @@
   }
   
   #film-back {
-    transform: rotateY(180deg);
+    transform: rotateX(180deg);
     font-weight: 400;
+    background-color: white;
   }
   
   .flipped #film-front {
-    transform: rotateY(180deg);
+    transform: rotateX(180deg);
   }
   
   .flipped #film-back {
-    transform: rotateY(360deg);
+    transform: rotateX(360deg);
   }
 
   #wrapper1 {
@@ -50,22 +51,6 @@
     border-top: 15px white dashed;
     border-bottom: 15px white dashed;
   }
-
-  .s15 {
-    background-color: var(--s15);
-  }
-
-.s25 {
-  background-color: var(--s25);
-}
-
-.s35 {
-  background-color: var(--s35);
-}
-
-.s45 {
-  background-color: var(--s45);
-}
 
 #reel {
     display: flex;
