--- a/src/style/Gallery.css
+++ b/src/style/Gallery.css
@@ -220,6 +220,8 @@ a {
         width: 100%;
         margin: 10px;
         height: 460px;
+        border-bottom-left-radius: 20px;
+        border-top-left-radius: 20px;
 
         img {
             height: auto;
