--- a/src/App.css
+++ b/src/App.css
@@ -1,72 +1,66 @@
 .App {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 30px;
 }
 
-#art-page {
-  display: flex;
+h1 {
+  margin-bottom: 0px;
 }
 
-#icon {
-  margin: 5px;
-  width: 100px;
-  position: relative;
+h2 a:hover {
+  color: var(--s3);
+}
 
-  img {
-    height: 50px;
+nav {
+  #home {
+    background-color: var(--s4);
+  }
+
+  .menu-item {
+    margin: 10px 20px 20px 0px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: var(--s5);
+  }
+
+  .menu-item:hover, #home:hover {
+    background-color: var(--s3);
   }
 }
 
-.bold-icon {
-  background-color: white;
-  font-weight: bold;
-}
-
-#menu {
-  display: flex;
-  flex-direction: row;
-  padding-left: 20px;
-  position: relative;
-  background-color: var(--s5);
-  margin-top: 5px;
-  margin-bottom: 20px;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  
-  p {
-    position: absolute;
-    top: 0px;
-  }
-}
-
-a:hover {
-  color: var(--s5);
-}
-
-#main {
-  img {
-    height: 300px;
-  }
-}
-
-#create {
+#create-page {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
+.page {
+  margin-top: 30px;
+}
+
 :root {
-  --s05: rgb(250,242,143);
   --s1: rgb(250,242,143);
-  --s15: #ffd9a4;
   --s2: #ffd9a4;
-  --s25: #fcd7e9;
   --s3: #fcd7e9;
-  --s35: #d9c0e7;
-  --s4: #d9c0e7;
-  --s45: #c4e1f6;
+  --s4: #debef6;
   --s5: #c4e1f6;
 }
 
+.s1 {
+  background-color: var(--s1);
+}
 
+.s2 {
+  background-color: var(--s2);
+}
 
+.s3 {
+  background-color: var(--s3);
+}
+
+.s4 {
+  background-color: var(--s4);
+}
+
+.s5 {
+  background-color: var(--s5);
+}
