--- a/src/style/FilmReel.css
+++ b/src/style/FilmReel.css
@@ -7,6 +7,7 @@
 
 .film {
     height: 165px;
+    width: 125px;
     position: relative;
     cursor: pointer;
     perspective: 1000px;
@@ -33,7 +34,7 @@
     font-weight: bold;
 
     img {
-      width: 105px;
+      width: 100%;
       height: 130px;
       opacity: 0.75;
       border-radius: 10px;
@@ -73,5 +74,10 @@
 }
 
 #film-title {
+  text-align: center;
+}
+
+#film-charts {
+  display: flex;
   text-align: center;
 }
