--- a/src/style/Notes.css
+++ b/src/style/Notes.css
@@ -28,10 +28,13 @@
 }
 
 #notes {
-    display: flex;
-    flex-wrap: wrap;
     margin-top: 20px;
     padding-top: 20px;
     border-top: 1px #bbb solid;
+}
+
+#notes-content {
+    display: flex;
+    flex-wrap: wrap;
 }
 
